# pyasync-template

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
apps/aiohttp/: app.py
config/: settings.py
